--- a/index.html
+++ b/index.html
@@ -1,5 +1,26 @@
-Enter a number: <input type="text" id="inputNumber" /> 
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8">
+ 		<title>Multiply-Divide</title>
+	</head>
+		<body>
+  			<nav></nav>
+  				<div>
+					Enter a number: <input type="text" id="inputNumber" /> 
+				</div?>
+				<div>	
+					<button id="converter">Convert</button>
+					<br>
+				</div>
+					
+				<h3>Answer:</h3> 
+				
+				<div id="answerOutput"> 
 
-<button id="converter">Convert</button>
-<br>
-<h3>Answer:</h3> <div id="answerOutput"> </div>
+				</div>
+
+ 			 <script text="text/javascript" src="multiply-divide.js"> </script>
+
+		</body>
+</html>
